
PLIB Change Log.
================

PLIB v1.1.10 (Jan 30th 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * PLIB now managed under CVS at SourceForge.

      http://sourceforge.net/project/?group_id=382

  * Added a collection of line/plane, plane/plane
    and line/line intersection routines to SG.
    Thanks to Norman Vine for most of them.

  * Fixed a bug in SSG file loader that would
    prevent recognition of obsolete SSG file
    types.

PLIB v1.1.9  (Jan 28th 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Fixed bug that caused the ref counts of the
    various vertex arrays in an ssgVtxTable to
    be incorrectly set to zero when that VtxTable
    is loaded from an '.ssg' format file.
    This tended to crash SSG with an assertion
    failure whenever you deleted an object
    loaded from a '.ssg' file.

  * Added the current texture map filename to
    ssgSimpleState and ssgStateSelector - which
    means that...

  * The SSG file format finally works correctly.
    Note that any SSG files you might have created
    before this release won't work anymore...but
    then they didn't work correctly before.

PLIB v1.1.8  (Jan 23rd 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Added ssgContext.  This makes it a lot easier
    to write programs that need to render multiple
    eyepoints in quick succession.

  * Added functionality to ssgVtxTable to enable
    applications to construct a vertex table and
    then add the vertex arrays instead of doing
    it all in one step.

PLIB v1.1.7  (Jan 20th 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Ooops!  1.1.6 accidentally went out set up to
    REQUIRE the 'freeglut' library instead of the
    original GLUT.  That's fixed now - it'll pick
    up on whichever you have installed and use
    freeglut if you have both. (This only really
    selects which header PLIB will use - you can
    still link your application against either
    GLUT)

    freeglut is here:
      http://freeglut.sourceforge.net

PLIB v1.1.6  (Jan 19th 2000)