@@ -1,6 +1,29 @@
 
 #include "ssgLocal.h"
 
+void ssgBranch::copy_from ( ssgBranch *src, int clone_flags )
+{
+  ssgEntity::copy_from ( src, clone_flags ) ;
+
+  for ( int i = 0 ; i < src -> getNumKids () ; i++ )
+  {
+    ssgEntity *k = src -> getKid ( i ) ;
+
+    if ( k != NULL && ( clone_flags & SSG_CLONE_RECURSIVE ) )
+      addKid ( k -> clone ( clone_flags ) ) ;
+    else
+      addKid ( k ) ;
+  }
+}
+
+ssgBranch *ssgBranch::clone ( int clone_flags )
+{
+  ssgBranch *b = new ssgBranch ;
+  b -> copy_from ( this, clone_flags ) ;
+  return b ;
+}
+
+
 
 ssgBranch::ssgBranch (void)
 {
