@@ -1,6 +1,25 @@
 
 #include "ssgLocal.h"
 
+void ssgState::copy_from ( ssgState *src, int clone_flags )
+{
+  ssgBase::copy_from ( src, clone_flags ) ;
+  setExternalPropertyIndex ( src -> getExternalPropertyIndex () ) ;
+
+  if ( src -> isTranslucent () )
+    setTranslucent () ;
+  else
+    setOpaque () ;
+}
+
+ssgState *ssgState::clone ( int clone_flags )
+{
+  fprintf ( stderr, "SSG: Cannot clone a base class ssgState\n" ) ;
+  assert ( FALSE ) ;
+  return NULL ;
+}
+
+
 ssgState::ssgState (void)
 {
   type |= SSG_TYPE_STATE ;
